--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
                     </div>
                     <div class="carousel-inner rounded shadow">
                         <div class="carousel-item active">
-                            <img src="./prueba.png" class="d-block w-100" alt="Proyecto 1" style="width: 100%; object-fit: cover;">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h3>Desarrollo Web</h3>
-                                <p>Sitios web modernos y responsivos</p>
+                            <img src="./Bienvenid@.png" class="d-block w-100" alt="Proyecto 1" style="width: 100%; object-fit: cover;">
+                            <div class="carousel-caption d-none d-md-block text-start">
+                                <h3 style="font-size: 24px;"></h3>
+                                <p style="font-size: 15px;"></p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./prueba.png" class="d-block w-100" alt="Proyecto 2" style="width: 100%; object-fit: cover;">
+                            <img src="./Oferta.png" class="d-block w-100" alt="Proyecto 2" style="width: 100%; object-fit: cover;">
                             <div class="carousel-caption d-none d-md-block">
-                                <h3>Aplicaciones Móviles</h3>
-                                <p>Soluciones innovadoras para iOS y Android</p>
+                                <h3></h3>
+                                <p></p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./prueba.png" class="d-block" alt="Proyecto 3" style="width: 100%; object-fit: cover;">
+                            <img src="./Bienvenid@.png" class="d-block" alt="Proyecto 3" style="width: 100%; object-fit: cover;">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>Diseño UX/UI</h3>
                                 <p>Experiencias de usuario excepcionales</p>
