--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./Bienvenid@.png" class="d-block" alt="Proyecto 3" style="width: 100%; object-fit: cover;">
+                            <img src="./colaboración.png" class="d-block" alt="Proyecto 3" style="width: 100%; object-fit: cover;">
                             <div class="carousel-caption d-none d-md-block">
-                                <h3>Diseño UX/UI</h3>
-                                <p>Experiencias de usuario excepcionales</p>
+                                <h3></h3>
+                                <p></p>
                             </div>
                         </div>
                     </div>
