--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
                             Vortex Studio es un equipo de creativos y estrategas enfocados en transformar tu marca a través de soluciones digitales integrales. Especializados en diseño web, desarrollo de aplicaciones de escritorio, tiendas online y marketing digital, creamos experiencias visuales y funcionales que conectan de manera efectiva con tu audiencia.
                         </p>
                         <div class="hero-buttons">
-                            <button class="btn btn-primary btn-lg px-7 me-1">
-                                Contáctanos
-                            </button>
-                            <button class="btn btn-outline-primary btn-lg px-7">
-                                Ver Portafolio
-                            </button>
+                            <a style="text-decoration: none;" href="https://wa.link/31t92z">
+                                <button class="btn btn-primary btn-lg px-7 me-1">
+                                    Contáctanos
+                                </button>
+                            </a>
+                            <a style="text-decoration: none;" href="#"></a>
+                                <button class="btn btn-outline-primary btn-lg px-7">
+                                    Ver Portafolio
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
