--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center mb-3">
-                                            <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Cliente 1">
+                                            <img src="./Testimonio1.png" class="rounded-circle me-3" style="width: 50px; height: 50px;" alt="Cliente 1">
                                             <div>
-                                                <h5 class="mb-0">María González</h5>
+                                                <h5 class="mb-0">Juan González</h5>
                                                 <small class="text-muted"></small>
                                             </div>
                                         </div>
@@ -457,9 +457,9 @@
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center mb-3">
-                                            <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Cliente 2">
+                                            <img src="./Testimonio2.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 2">
                                             <div>
-                                                <h5 class="mb-0">Carlos Rodríguez</h5>
+                                                <h5 class="mb-0">Ana Martínez</h5>
                                                 <small class="text-muted"></small>
                                             </div>
                                         </div>
@@ -479,9 +479,9 @@
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center mb-3">
-                                            <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Cliente 3">
+                                            <img src="./Testimonio3.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 3">
                                             <div>
-                                                <h5 class="mb-0">Ana Martínez</h5>
+                                                <h5 class="mb-0">Carlos Rodríguez</h5>
                                                 <small class="text-muted"></small>
                                             </div>
                                         </div>
@@ -506,7 +506,7 @@
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center mb-3">
-                                            <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Cliente 4">
+                                            <img src="./Testimonio4.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 4">
                                             <div>
                                                 <h5 class="mb-0">Pedro Sánchez</h5>
                                                 <small class="text-muted"></small>
@@ -528,9 +528,9 @@
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center mb-3">
-                                            <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Cliente 2">
+                                            <img src="./Testimonio5.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 2">
                                             <div>
-                                                <h5 class="mb-0">Carlos Rodríguez</h5>
+                                                <h5 class="mb-0">Miguel Pérez</h5>
                                                 <small class="text-muted"></small>
                                             </div>
                                         </div>
@@ -550,9 +550,9 @@
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center mb-3">
-                                            <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Cliente 2">
+                                            <img src="./Testimonio6.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 2">
                                             <div>
-                                                <h5 class="mb-0">Carlos Rodríguez</h5>
+                                                <h5 class="mb-0">Valeria López</h5>
                                                 <small class="text-muted"></small>
                                             </div>
                                         </div>
