--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                             <i class="fas fa-star text-warning"></i>
                                             <i class="fas fa-star-half-alt text-warning"></i>
                                         </div>
-                                        <p class="card-text">"El equipo de Vortex Studio demostró un gran compromiso con nuestro proyecto."</p>
+                                        <p class="card-text">"El desarrollo fue fluido y transparente, con el equipo de Vortex Studio siempre disponible para resolver dudas y asegurar el éxito del proyecto."</p>
                                     </div>
                                 </div>
                             </div>
@@ -563,7 +563,7 @@
                                             <i class="fas fa-star text-warning"></i>
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
-                                        <p class="card-text">"El proceso de desarrollo fue fluido y transparente. El equipo de Vortex Studio estuvo siempre disponible para resolver dudas y asegurarse de que el proyecto fuera un éxito."</p>
+                                        <p class="card-text">"El equipo de Vortex Studio demostró un gran compromiso con nuestro proyecto."</p>
                                     </div>
                                 </div>
                             </div>
