--- a/index.html
+++ b/index.html
@@ -281,7 +281,12 @@
                         <div class="card-body">
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Una Landing Page es una página web de una sola cara diseñada estratégicamente para captar la atención de los visitantes y motivarlos a realizar una acción específica, como comprar un producto, suscribirse a un servicio o completar un formulario.</p>
-                            <h2 style="font-size: 60px;" class="text-center mb-4">$800<small class="text-muted" style="font-size: 30px; text-decoration: line-through;">/$1000</small></h2>
+                            <div class="text-center mb-4">
+                                <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#pagoModal">
+                                    Presupuesto
+                                </button>
+                            </div>
+                            <!-- <h2 style="font-size: 60px;" class="text-center mb-4">$800<small class="text-muted" style="font-size: 30px; text-decoration: line-through;">/$1000</small></h2>-->
                             <ul class="list-unstyled">
                                 <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Integración de herramientas y analítica</li>
                                 <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Adaptabilidad y optimización</li>
@@ -296,11 +301,6 @@
                                 <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Imágenes de Stock</li>
                             </ul>
                             <p class="mt-3 text-muted"><small>Página web ideal para presentar un producto, ebook, captar leads, ofrecer una master class, etc.</small></p>
-                            <div class="text-center mt-4">
-                                <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#pagoModal">
-                                    Empezar Ahora
-                                </button>
-                            </div>
                         </div>
                     </div>
                 </div>
