--- a/index.html
+++ b/index.html
@@ -46,6 +46,52 @@
 
     <!-- Hero Section -->
     <header class="hero-section bg-light">
+        <!-- Carrusel de Imágenes -->
+        <section id="sobre-nosotros" class="pb-5 d-lg-none d-md-block d-block">
+            <div class="container">
+                <h2 class="text-center mb-4"></h2>
+                <div id="carouselProyectos" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="2"></button>
+                    </div>
+                    <div class="carousel-inner rounded shadow">
+                        <div class="carousel-item active">
+                            <img src="./Bienvenid@.png" class="d-block w-100" alt="Bienvenid@" style="width: 100%; object-fit: cover;">
+                            <div class="carousel-caption d-none d-md-block text-start">
+                                <h3 style="font-size: 24px;"></h3>
+                                <p style="font-size: 15px;"></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Oferta.png" class="d-block w-100" alt="Oferta" style="width: 100%; object-fit: cover;">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./colaboración.png" class="d-block" alt="Colaboración" style="width: 100%; object-fit: cover;">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyectos" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                        <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProyectos" data-bs-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                        <span class="visually-hidden">Siguiente</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+
         <div class="container " >
             <div class="row align-items-center">
                 <!-- Columna de texto -->
@@ -75,7 +121,7 @@
                     </div>
                 </div>
                 <!-- Columna de imagen -->
-                <div class="col-lg-6 mt-5 mt-lg-5">
+                <div class="col-lg-6 mt-5 mt-lg-5 d-lg-block d-md-none d-none">
                     <div class="hero-image position-relative">
                         <img src="./principal.png" width="100%" alt="Diseño Creativo" class="rounded-4 ">
                     </div>
@@ -125,7 +171,7 @@
         
         <!-- Carrusel de Imágenes -->
         <section id="sobre-nosotros" class="pb-5">
-            <div class="container">
+            <div class="container d-lg-block d-md-none d-none">
                 <h2 class="text-center mb-4"></h2>
                 <div id="carouselProyectos" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
