--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="col-lg-6 pe-lg-5">
                     <div class="hero-content text-lg-start text-center">
                         <span class="subtitle text-primary fw-semibold mb-3 d-block">
-                            Agencia de diseño Gráfico en Venezuela
+                            Agencia de desarrollo web en Venezuela
                         </span>
                         <h1 class="display-6 fw-bold mb-3 text-dark">
                             Somos tu agencia creativa de confianza.
