--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
         <section id="sobre-nosotros" class="pb-5">
             <div class="container d-lg-block d-md-none d-none">
                 <h2 class="text-center mb-4"></h2>
-                <div id="carouselProyectos" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselProyectos1" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="0" class="active"></button>
-                        <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="1"></button>
-                        <button type="button" data-bs-target="#carouselProyectos" data-bs-slide-to="2"></button>
+                        <button type="button" data-bs-target="#carouselProyectos1" data-bs-slide-to="0" class="active"></button>
+                        <button type="button" data-bs-target="#carouselProyectos1" data-bs-slide-to="1"></button>
+                        <button type="button" data-bs-target="#carouselProyectos1" data-bs-slide-to="2"></button>
                     </div>
                     <div class="carousel-inner rounded shadow">
                         <div class="carousel-item active">
@@ -202,11 +202,11 @@
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyectos" data-bs-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyectos1" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                         <span class="visually-hidden">Anterior</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProyectos" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProyectos1" data-bs-slide="next">
                         <span class="carousel-control-next-icon"></span>
                         <span class="visually-hidden">Siguiente</span>
                     </button>
