--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             Vortex Studio es un equipo de creativos y estrategas enfocados en transformar tu marca a través de soluciones digitales integrales. Especializados en diseño web, desarrollo de aplicaciones de escritorio, tiendas online y marketing digital, creamos experiencias visuales y funcionales que conectan de manera efectiva con tu audiencia.
                         </p>
                         <div class="hero-buttons">
-                            <a style="text-decoration: none;" href="https://wa.link/31t92z">
+                            <a style="text-decoration: none;" href="https://wa.link/nmxaf1">
                                 <button class="btn btn-primary btn-lg px-7 me-1">
                                     Contáctanos
                                 </button>
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
-                    <h3 class="mb-2" style="font-size: 40px;"><b>¡Oferta Especial!</b></h3>
+                    <h3 class="mb-2" style="font-size: 42px;"><b>¡Oferta Especial!</b></h3>
                     <p class="lead mb-2" style="font-size: 16px;">Obtén un 20% de descuento en desarrollo web</p>
                     <div class="countdown-timer d-flex justify-content-center gap-3">
                         <div class="time-block">
@@ -266,9 +266,11 @@
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Una Landing Page es una página web de una sola cara diseñada estratégicamente para captar la atención de los visitantes y motivarlos a realizar una acción específica, como comprar un producto, suscribirse a un servicio o completar un formulario.</p>
                             <div class="text-center mb-4">
-                                <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#pagoModal">
-                                    Presupuesto
-                                </button>
+                                <a href="https://wa.link/nmxaf1" style="text-decoration: none;" id="presupuesto">
+                                    <button class="btn btn-primary btn-lg">
+                                        Presupuesto
+                                    </button>
+                                </a>
                             </div>
                             <!-- <h2 style="font-size: 60px;" class="text-center mb-4">$800<small class="text-muted" style="font-size: 30px; text-decoration: line-through;">/$1000</small></h2>-->
                             <ul class="list-unstyled">
@@ -299,9 +301,11 @@
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Tienda online de máximo 50 productos</p>
                             <div class="text-center mb-4">
-                                <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#pagoModal">
-                                    Presupuesto
-                                </button>
+                                <a href="https://wa.link/nmxaf1" style="text-decoration: none;" id="presupuesto">
+                                    <button class="btn btn-primary btn-lg">
+                                        Presupuesto
+                                    </button>
+                                </a>
                             </div>
                             <ul class="list-unstyled">
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Dominio gratis por un año</li>
@@ -338,9 +342,11 @@
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Sitio web con 4 secciones (home, quienes somos, servicios y contacto)</p>
                             <div class="text-center mb-4">
-                                <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#pagoModal">
-                                    Presupuesto
-                                </button>
+                                <a href="https://wa.link/nmxaf1" style="text-decoration: none;" id="presupuesto">
+                                    <button class="btn btn-primary btn-lg">
+                                        Presupuesto
+                                    </button>
+                                </a>
                             </div>
                             <ul class="list-unstyled">
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Dominio gratis por un año</li>
