--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+        <!-- Banner de cookies -->
+        <div id="cookie-banner" class="cookie-banner">
+            <div class="cookie-banner-content">
+                <p>
+                    Utilizamos cookies para mejorar tu experiencia. Al continuar navegando, aceptas nuestra
+                    <a href="/politicas-de-cookies" target="_blank">Política de Cookies</a>.
+                </p>
+                <button id="accept-cookies" class="cookie-btn">Aceptar</button>
+            </div>
+        </div>
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
@@ -274,17 +285,18 @@
                             </div>
                             <!-- <h2 style="font-size: 60px;" class="text-center mb-4">$800<small class="text-muted" style="font-size: 30px; text-decoration: line-through;">/$1000</small></h2>-->
                             <ul class="list-unstyled">
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Integración de herramientas y analítica</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Adaptabilidad y optimización</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Formularios de contacto y llamados a la acción</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Optimización para motores de búsqueda (SEO Básico)</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Dominio Gratis por un año</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Hosting gratis por un año</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Políticas de Cookies y demás páginas legales</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Botón de WhatsApp</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Correo Corporativo</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Botones a las redes sociales</li>
-                                <li class="mb-3"  style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Imágenes de Stock</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Estructura Web</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Diseño Responsivo</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Interactividad</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Optimización SEO Básico</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Políticas de Cookies y Páginas Legales</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Integración de Google Analytics</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Formularios de Contacto y CTA</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Hosting Gratis por un Año</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Dominio Gratis por un Año</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Correo Corporativo</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Botones de Redes Sociales</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Imágenes de Stock</li>
                             </ul>
                             <p class="mt-3 text-muted"><small>Página web ideal para presentar un producto, ebook, captar leads, ofrecer una master class, etc.</small></p>
                         </div>
@@ -317,14 +329,14 @@
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Optimización para motores de búsqueda (SEO Básico)</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Botón de WhatsApp</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Configuración de pasarelas de pago</li>
-                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Plugins premium</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Atención al cliente IA (4 meses)</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Imágenes de Stock</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Auto gestionable</li>
                             </ul>
                             <div class="mt-4">
                                 <p class="fw-bold text-danger">No incluye:</p>
                                 <ul class="list-unstyled">
-                                    <li class="mb-3"><i class="fas fa-times text-danger me-2"></i>Subida de nuevos productos durante los meses de actualización</li>
+                                    <li class="mb-3"><i class="fas fa-times text-danger me-2"></i>Nuevos productos durante los meses de actualización</li>
                                 </ul>
                             </div>
                             
@@ -359,7 +371,7 @@
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Imágenes de Stock</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Integración de herramientas y analítica</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Botones de redes sociales</li>
-                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Plugins Premium</li>
+                                <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Atención al cliente IA (4 meses)</li>
                                 <li class="mb-3" style="font-size: 13px;"><i class="fas fa-check text-primary me-2"></i>Adaptabilidad y optimización</li>
                             </ul>
                             <p class="mt-3 text-muted"><small>Página web ideal para: Pequeñas empresas locales, servicios profesionales, restaurantes, etc.</small></p>
@@ -869,5 +881,6 @@
     <script src="js/payment.js"></script>
     <script src="js/scrollTop.js"></script>
     <script src="js/whatsapp.js"></script>
+    <script src="js/cookiesbanner.js"></script>
 </body>
 </html> 
