--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             <h4 class="card-title">Fundación Zoé</h4>
                             <p class="card-text">Hemos creado una página de aterrizaje optimizada para Fundación Zoe, que facilita la donación directa a través de una integración segura con la pasarela de pago de PayPal. El diseño intuitivo permite a los usuarios realizar contribuciones de manera rápida y sencilla.</p>
                             <div class="tech-stack">
-                                <span class="badge bg-primary">Nuxt</span>
+                                <span class="badge bg-primary">Nuxt 3</span>
                                 <span class="badge bg-secondary">CSS</span>
                                 <span class="badge bg-success">Paypal</span>
                             </div>
@@ -858,14 +858,14 @@
                 <div class="col-12">
                     <hr class="bg-light">
                     <div class="d-flex justify-content-between align-items-center flex-wrap">
-                        <p class="mb-2">
+                        <p class="mb-2" >
                             &copy; 2024 VortexStudio. Todos los derechos reservados.
                         </p>
-                        <p class="mb-2">
+                       <!-- <p class="mb-2">
                             Diseñado y desarrollado por <a href="https://vortexstudio.tech" target="_blank">
                                 <img src="./Logo/VortexSudio.png" alt="VortexStudio" height="20">
                             </a>
-                        </p>
+                        </p>-->
                     </div>
                 </div>
             </div>
