--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     Contáctanos
                                 </button>
                             </a>
-                            <a style="text-decoration: none;" href="#"></a>
+                            <a style="text-decoration: none;" href="./portafolio.html">
                                 <button class="btn btn-outline-primary btn-lg px-7">
                                     Ver Portafolio
                                 </button>
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-outline-primary">Ver más</a>
+                            <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -419,7 +419,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-outline-primary">Ver más</a>
+                            <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -437,7 +437,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-outline-primary">Ver más</a>
+                            <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -673,7 +673,7 @@
                         </div>
                         <div class="card-footer bg-white border-0">
                             <!-- Producto 1 -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pagoModal" data-producto="WhatsApp con IA">
+                            <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#pagoModal" data-producto="WhatsApp con IA">
                                 Comprar ahora
                             </button>
                         </div>
@@ -694,7 +694,7 @@
                         </div>
                         <div class="card-footer bg-white border-0">
                            <!-- Producto 2 -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pagoModal" data-producto="Instagram y Facebook con IA">
+                            <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#pagoModal" data-producto="Instagram y Facebook con IA">
                                 Comprar ahora
                             </button>
                         </div>
@@ -715,7 +715,7 @@
                         </div>
                         <div class="card-footer bg-white border-0">
                             <!-- Producto 3 -->
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pagoModal" data-producto="Atención al cliente Web con IA">
+                            <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#pagoModal" data-producto="Atención al cliente Web con IA">
                                 Comprar ahora
                             </button>
                         </div>
