--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <!-- Loader (pantalla de carga) -->
+  <div id="loader">
+    <div class="loader-spinner"></div>
+  </div>
+
+  <!-- Contenido de la página -->
+  <div id="content">
+
     <button id="btnVolverArriba" class="btn-volver-arriba" title="Volver arriba">
         <i class="fas fa-arrow-up"></i>
     </button>
@@ -914,7 +923,7 @@
         </div>
     </footer>
 
-
+</div>
     <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
@@ -924,5 +933,7 @@
     <script src="js/scrollTop.js"></script>
     <script src="js/whatsapp.js"></script>
     <script src="js/cookiesbanner.js"></script>
+    <script src="js/loader.js"></script>
+
 </body>
 </html> 
