--- a/portafolio.html
+++ b/portafolio.html
@@ -17,6 +17,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+
+      <!-- Loader (pantalla de carga) -->
+  <div id="loader">
+    <div class="loader-spinner"></div>
+  </div>
+
+  <!-- Contenido de la página -->
+  <div id="content">
+
     <button id="btnVolverArriba" class="btn-volver-arriba" title="Volver arriba">
         <i class="fas fa-arrow-up"></i>
     </button>
@@ -354,11 +364,12 @@
             </div>
         </div>
     </footer>
-
+</div>
 
     <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scrollTop.js"></script>
+    <script src="js/loader.js"></script>
 
 
 </body>
