--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./Logo/VortexSudio4.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./Logo/VortexSudio4.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./Logo/VortexSudio4.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -499,7 +500,7 @@
             <div class="swiper-container">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <div class="card h-100 shadow-sm">
+                  <div class="card h-100 shadow-sm-10">
                     <div class="card-body">
                         <div class="d-flex align-items-center mb-3">
                             <img src="./Testimonio1.png" class="rounded-circle me-3" style="width: 50px; height: 50px;" alt="Cliente 1">
@@ -520,7 +521,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="card h-100 shadow-sm">
+                  <div class="card h-100 shadow-sm-10">
                     <div class="card-body">
                         <div class="d-flex align-items-center mb-3">
                             <img src="./Testimonio2.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 2">
@@ -541,7 +542,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="card h-100 shadow-sm">
+                  <div class="card h-100 shadow-sm-10">
                     <div class="card-body">
                         <div class="d-flex align-items-center mb-3">
                             <img src="./Testimonio3.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 3">
@@ -562,7 +563,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="card h-100 shadow-sm">
+                  <div class="card h-100 shadow-sm-10">
                     <div class="card-body">
                         <div class="d-flex align-items-center mb-3">
                             <img src="./Testimonio4.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 4">
@@ -583,7 +584,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="card h-100 shadow-sm">
+                  <div class="card h-100 shadow-sm-10">
                     <div class="card-body">
                         <div class="d-flex align-items-center mb-3">
                             <img src="./Testimonio5.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 2">
@@ -604,7 +605,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="card h-100 shadow-sm">
+                    <div class="card h-100 shadow-sm-10">
                         <div class="card-body">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./Testimonio6.png" class="rounded-circle me-3" style="width: 50px; height: 50px;"  alt="Cliente 2">
@@ -736,10 +737,14 @@
                                 </div>
 
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary btn-lg px-5">
+                                    <button type="submit" class="btn btn-primary btn-lg px-4 ms-lg-7 mt-3 ">
                                         Enviar por WhatsApp <i class="fab fa-whatsapp ms-2"></i>
                                     </button>
+                                    <button type="submit" id="enviarCorreo" class="btn btn-primary btn-lg px-4 ms-lg-5 mt-3 ">
+                                        Enviar por Correo<i class="bi bi-envelope-at-fill ms-2"></i>
+                                    </button>
                                 </div>
+                                
                             </form>
                         </div>
                     </div>
@@ -910,6 +915,7 @@
     <script src="js/cookiesbanner.js"></script>
     <script src="js/loader.js"></script>
     <script src="js/testimonios.js"></script>
+    <script src="js/correo.js"></script>
 
 
 </body>
