--- a/index.html
+++ b/index.html
@@ -737,10 +737,10 @@
                                 </div>
 
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-primary btn-lg px-4 ms-lg-7 mt-3 ">
+                                    <button type="submit" class="btn btn-primary btn-lg ms-lg-6 mt-3 " style="font-size: 14px;">
                                         Enviar por WhatsApp <i class="fab fa-whatsapp ms-2"></i>
                                     </button>
-                                    <button type="submit" id="enviarCorreo" class="btn btn-primary btn-lg px-4 ms-lg-5 mt-3 ">
+                                    <button type="submit" id="enviarCorreo" class="btn btn-primary btn-lg ms-lg-6 mt-3 " style="font-size: 14px;">
                                         Enviar por Correo<i class="bi bi-envelope-at-fill ms-2"></i>
                                     </button>
                                 </div>
