--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="content">
 
     <button id="btnVolverArriba" class="btn-volver-arriba" title="Volver arriba">
-        <i class="fas fa-arrow-up"></i>
+        <i class="fas fa-arrow-up" style="display: flex; justify-content: center; justify-items: center ; align-content: center; align-items: center;"></i>
     </button>
 
         <!-- Banner de cookies -->
