--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             Vortex Studio es un equipo de creativos y estrategas enfocados en transformar tu marca a través de soluciones digitales integrales. Especializados en diseño web, desarrollo de aplicaciones de escritorio, tiendas online y marketing digital, creamos experiencias visuales y funcionales que conectan de manera efectiva con tu audiencia.
                         </p>
                         <div class="hero-buttons">
-                            <a style="text-decoration: none;" href="https://wa.link/nmxaf1">
+                            <a style="text-decoration: none;" href="https://wa.me/message/2NOZ6FL2KUJWP1">
                                 <button class="btn btn-primary btn-lg px-7 me-1">
                                     Contáctanos
                                 </button>
@@ -281,7 +281,7 @@
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Una Landing Page es una página web de una sola cara diseñada estratégicamente para captar la atención de los visitantes y motivarlos a realizar una acción específica, como comprar un producto, suscribirse a un servicio o completar un formulario.</p>
                             <div class="text-center mb-4">
-                                <a href="https://wa.link/nmxaf1" style="text-decoration: none;" id="presupuesto">
+                                <a href="https://wa.me/message/2NOZ6FL2KUJWP1" style="text-decoration: none;" id="presupuesto">
                                     <button class="btn btn-primary btn-lg">
                                         Presupuesto
                                     </button>
@@ -317,7 +317,7 @@
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Tienda online de máximo 50 productos</p>
                             <div class="text-center mb-4">
-                                <a href="https://wa.link/nmxaf1" style="text-decoration: none;" id="presupuesto">
+                                <a href="https://wa.me/message/2NOZ6FL2KUJWP1" style="text-decoration: none;" id="presupuesto">
                                     <button class="btn btn-primary btn-lg">
                                         Presupuesto
                                     </button>
@@ -358,7 +358,7 @@
                             <h4 class="mb-1"></h4>
                             <p style="font-size: 13px;">Sitio web con 4 secciones (home, quienes somos, servicios y contacto)</p>
                             <div class="text-center mb-4">
-                                <a href="https://wa.link/nmxaf1" style="text-decoration: none;" id="presupuesto">
+                                <a href="https://wa.me/message/2NOZ6FL2KUJWP1" style="text-decoration: none;" id="presupuesto">
                                     <button class="btn btn-primary btn-lg">
                                         Presupuesto
                                     </button>
@@ -843,10 +843,9 @@
                     <img src="./Logo/VortexSudio.png" alt="Logo" height="40" class="mb-3">
                     <p class="mb-3">Transformamos ideas en soluciones digitales innovadoras para impulsar el éxito de tu negocio.</p>
                     <div class="social-links">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-telegram"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61568141544236" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/vortexstudio_ve/" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="https://wa.me/message/2NOZ6FL2KUJWP1" class="text-white"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -857,7 +856,7 @@
                         <li class="mb-2"><a href="#inicio" class="text-white text-decoration-none">Inicio</a></li>
                         <li class="mb-2"><a href="#proyectos" class="text-white text-decoration-none">Destacados</a></li>
                         <li class="mb-2"><a href="#planes" class="text-white text-decoration-none">Planes</a></li>
-                        <li class="mb-2"><a href="##productos-digitales" class="text-white text-decoration-none">Productos Digitales</a></li>
+                        <li class="mb-2"><a href="#productos-digitales" class="text-white text-decoration-none">Productos Digitales</a></li>
                     </ul>
                 </div>
 
@@ -876,7 +875,7 @@
                 <div class="col-lg-3 mb-4">
                     <h5 class="mb-3">Contacto</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2 text-white"></i>Venezuela, Barquisimeto</li>
+                        <li class="mb-2"><i class="fas fa-map-marker-alt me-2 text-white"></i>Venezuela, Barquisimeto, Edo Lara, 3001</li>
                         <li class="mb-2"><i class="fas fa-phone me-2 text-white"></i>+58 4245542026</li>
                         <li class="mb-2"><i class="fas fa-envelope me-2 text-white"></i>vortexstudioweb@gmail.com</li>
                         <li class="mb-2"><i class="fas fa-clock me-2 text-white"></i>Lun - Vie: 8:00 - 20:00</li>
@@ -886,9 +885,10 @@
 
             <!-- Copyright -->
             <div class="row mt-4">
-                <div class="col-12">
+                <div class="col-12" style="text-align: center;">
                     <hr class="bg-light">
-                    <div class="d-flex justify-content-between align-items-center flex-wrap">
+                    <div class="text-center">
+                        <!--<div class="d-flex justify-content-between align-items-center flex-wrap">-->
                         <p class="mb-2" >
                             &copy; 2024 VortexStudio. Todos los derechos reservados.
                         </p>
