--- a/portafolio.html
+++ b/portafolio.html
@@ -308,10 +308,9 @@
                     <img src="./Logo/VortexSudio.png" alt="Logo" height="40" class="mb-3">
                     <p class="mb-3">Transformamos ideas en soluciones digitales innovadoras para impulsar el éxito de tu negocio.</p>
                     <div class="social-links">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-telegram"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61568141544236" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/vortexstudio_ve/" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="https://wa.me/message/2NOZ6FL2KUJWP1" class="text-white"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
